--- a/Pages/OrderPage/newOrderStyle.css
+++ b/Pages/OrderPage/newOrderStyle.css
@@ -2,13 +2,12 @@ body{
     font-family: 'Varela Round', sans-serif;
 }
 
-.newOrderHeader{
+.navHeader{
     position: absolute;
     left: 0;
-    right: 0;
     top: 0;
     width: 100%;
-    height: 60px;
+    height: 90px;
     background-color: #FFC480;
 
 
@@ -26,12 +25,31 @@ body{
 
 #newOrderLbl{
     position: absolute;
-    left: 45%;
-    right: 0%;
+    left: 8.5%;
     top:10px;
 
     font-size: 33px;
+}
 
+#navigation{
+    position: absolute;
+    left: 43%;
+    top: 70%;
+    width: 15%;
+}
+
+#aInicio{
+    margin-left: 15%;
+
+    text-decoration: none;
+    color: #000000;
+
+}
+#aPedido{
+    margin-left: 15%;
+
+    text-decoration: none;
+    color: #000000;
 }
 
 .grid-container {
@@ -199,3 +217,20 @@ select:-webkit-autofill {
 
     cursor: pointer;
 }
+
+.contactFooter{
+    position: absolute;
+    left: 0;
+    top: 110%;
+    width: 100%;
+    height: 80px;
+    background-color: #FFC480;
+
+    border-top-style: solid;
+    border-top-width: 1px;
+    border-top-color: #000000;
+
+    align-content: flex-start;
+}
+
+
