--- a/Pages/OrderPage/newOrderStyle.css
+++ b/Pages/OrderPage/newOrderStyle.css
@@ -3,11 +3,13 @@ body{
 }
 
 .navHeader{
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
     width: 100%;
-    height: 90px;
+    height: 70px;
+    z-index: 1;
+    transition: 0.5s;
     background-color: #FFC480;
 
 
@@ -31,12 +33,27 @@ body{
     font-size: 33px;
 }
 
+#openNav{
+    position: absolute;
+    top: 50px;
+    left: 50%;
+}
+
+
+#openNav.hide{
+    opacity: 0;
+    transition: 0.5s;
+}
+
 #navigation{
     position: absolute;
-    left: 43%;
-    top: 70%;
-    width: 15%;
+    left: 36%;
+    top: 70px;
+    width: 30%;
+    height: 20px;
+    content-visibility: hidden;
 }
+
 
 #aInicio{
     margin-left: 15%;
@@ -46,6 +63,13 @@ body{
 
 }
 #aPedido{
+    margin-left: 15%;
+
+    text-decoration: none;
+    color: #000000;
+}
+
+#aCarta{
     margin-left: 15%;
 
     text-decoration: none;
@@ -79,17 +103,62 @@ body{
     margin-bottom: 25px;
 }
 
+
 .grid-item2 {
     grid-column-start: 2;
+
     display: grid;
-    grid-template-rows: 15% ;
+    grid-template-rows:90% 90% 90% 90% ;
+    grid-template-columns: 100%;
+
 
     text-align: left;
     margin-top: 30%;
+
+    
+    overflow-y: scroll;
+    overflow-x: hidden;
+
+    height: 80%;
+    width: 165%;
+
+}
+
+.item1{
+    position: relative;
+    display: grid;
+    grid-template-rows: 10% 25% 25% 25% 10%;
+    grid-template-columns: 100%;
+
+
+}
+
+.item2{
+    position: relative;
+    display: grid;
+    grid-template-rows: 15%;
+    grid-template-columns: 100%;
+
+}
+
+.item3{
+    position: relative;
+    display: grid;
+    grid-template-rows: 15%;
+    grid-template-columns: 100%;
+
+}
+
+.item4{
+    position: relative;
+    display: grid;
+    grid-template-rows: 15%;
+    grid-template-columns: 100%;
+
 }
 
 #lblOurHams{
-    margin-left: 25%;
+    margin-left: 5%;
     text-align: center;
     font-size: 25px;
 }
